<resources>
    <string name="app_name">Sirius</string>
    <string name="background_dota2">Backround Dota 2</string>
    <string name="star">start</string>
    <string name="dota">DoTA 2</string>
    <string name="dota_icon">dota icon</string>
    <string name="moba">MOBA</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="strategy">STRATEGY</string>
    <string name="description_dota2">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the \'Ancient\', whilst defending their own.</string>
    <string name="title_rating">Review and Ratings</string>
    <string name="rate">4.9</string>
    <string name="count_reviews">70M Reviews</string>
    <string name="jung">Auguste Conte</string>
    <string name="date_jung">February 14, 2019</string>
    <string name="descrilption_jung">\'Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.\'</string>
    <string name="auguste">Jang Marcelino</string>
    <string name="date_auguste">February 14, 2019</string>
    <string name="description_auguste">\'Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.\'</string>
    <string name="install">Install</string>
</resources>