<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:nestedScrollingEnabled="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_dota2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_dota2"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_dota2" />

    <ImageView
        android:id="@+id/dota2_icon"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-39dp"
        android:background="@drawable/icon_background_dota2"
        android:contentDescription="@string/dota_icon"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_dota2"
        app:srcCompat="@drawable/icon_dota2" />

    <TextView
        android:id="@+id/dota2_name"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/dota"
        app:layout_constraintStart_toEndOf="@+id/dota2_icon"
        app:layout_constraintTop_toTopOf="@+id/dota2_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/dota2_icon"
        app:layout_constraintTop_toBottomOf="@+id/dota2_name">

        <ImageView
            android:id="@+id/imageView"
            style="@style/Star"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageView4"
            style="@style/Star"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageView5"
            style="@style/Star"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageView3"
            style="@style/Star"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/start"
            style="@style/Star"
            android:layout_weight="1"
            app:srcCompat="@drawable/star" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dota2_icon">

        <TextView
            android:id="@+id/moba"
            style="@style/Categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/moba" />

        <TextView
            android:id="@+id/multiplayer"
            style="@style/Categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/multiplayer" />

        <TextView
            android:id="@+id/strategy"
            style="@style/Categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/strategy" />

    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:gravity=""
        android:text="@string/description_dota2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories"
        tools:layout_editor_absoluteX="310dp"
        tools:layout_editor_absoluteY="408dp" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_rating"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />



</androidx.constraintlayout.widget.ConstraintLayout>